fix(story): stop overlapping of modules

--- a/src/scripts/components/stories/story/blocks/generic/text-body-large/text-body-large.module.css
+++ b/src/scripts/components/stories/story/blocks/generic/text-body-large/text-body-large.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   /* As we want the slides to snap, we need to disable the scroll snap alignment on the container. Otherwise, it might not work properly */
   > * {
-    height: var(--story-height);
+    height: min(var(--story-height), 100%);
   }
 }
 
@@ -12,9 +12,9 @@
   color: white;
 
   .slidesContainer {
-    width: 100%;
-    top: 0;
-    position: absolute;
-    overflow: hidden;
+    /* width: 100%; */
+    /* top: 0; */
+    /* position: absolute; */
+    overflow: scroll;
   }
 }
