--- a/src/scripts/components/stories/story/blocks/generic/text-container/text-wrapper.module.css
+++ b/src/scripts/components/stories/story/blocks/generic/text-container/text-wrapper.module.css
@@ -1,7 +1,7 @@
 /* inhereits story grid class */
 .textWrapper {
   color: var(--Neutral-White, #fff);
-  height: var(--story-height);
+  /* height: var(--story-height); */
   position: relative;
   z-index: 1000;
 }
